<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/portfolio_title"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_portfolio_app_spotify_streamer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/portfolio_app_background"
            android:text="@string/portfolio_app_spotify_streamer" />

        <Button
            android:id="@+id/button_portfolio_app_scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/portfolio_app_background"
            android:text="@string/portfolio_app_scores" />

        <Button
            android:id="@+id/button_portfolio_app_library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/portfolio_app_background"
            android:text="@string/portfolio_app_library" />

        <Button
            android:id="@+id/button_portfolio_app_build_it_bigger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/portfolio_app_background"
            android:text="@string/portfolio_app_build_it_bigger" />

        <Button
            android:id="@+id/button_portfolio_app_xyz_reader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/portfolio_app_background"
            android:text="@string/portfolio_app_xyz_reader" />

        <Button
            android:id="@+id/button_portfolio_app_capstone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/portfolio_capstone_background"
            android:text="@string/portfolio_app_capstone"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>
